# Smart_dashboard

./: .gitignore  AppConfig.cpp  AppConfig.h  BUILD.md  CMakeLists.txt  TestPreview.qml  main.cpp  qml.qrc
assets/: config.json
docs/: COMPOSITOR_IMPLEMENTATION.md  COMPOSITOR_MODE.md  DEBUG_COMPOSITOR.md  QUICK_START_COMPOSITOR.md  TROUBLESHOOTING.md
qml/: DashboardShell.qml  MainShell.qml  WidgetFactory.qml
qml/pages/: DashboardDefault.qml
qml/widgets/: AndroidSlot.qml  AppDock.qml  AppIcon.qml  AppWindowEmbed.qml  CompositorSurfaceEmbed.qml  FuelGaugeWidget.qml  FuelWidget.qml  OdometerWidget.qml  SpeedLimitWidget.qml  SpeedWidget.qml  StatusBarWidget.qml  TachometerWidget.qml  TimeWidget.qml  WarningWidget.qml
scripts/: setup-auto-push.sh  start-compositor.sh
src/: surfaceitem.h  waydroidlauncher.h  waydroidmanager.cpp  waydroidmanager.h  waydroidwindowembedder.h  waylandcompositor.h  windowembeditem.h  windowtextureitem.h  xdgshellhelper.cpp  xdgshellhelper.h
